--- a/client/src/styles/index.css
+++ b/client/src/styles/index.css
@@ -5,7 +5,7 @@ body {
         "Helvetica Neue", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-    background-color: #253863;
+    background-color: #253863 !important;
 }
 
 code {
